Some UI Fixes like extra whitespace in mobile devices and added a light border around the country's flag

--- a/src/Client/styles/main.scss
+++ b/src/Client/styles/main.scss
@@ -17,3 +17,14 @@ div.modal-content{
 #carousel{
     padding:0 !important;
 }
+
+@media(max-width:600px){
+.carousel{
+    height:200px;
+}
+}
+
+
+.flag{
+    border: 1px solid rgba(0,0,0,0.2);
+}
